--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
+    "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
