--- a/server/config/config.json
+++ b/server/config/config.json
@@ -7,11 +7,12 @@
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "postgres",
+    "password": "postgres",
+    "database": "careerDBtest",
+    "host": "localhost",
+    "dialect": "postgres",
+    "logging": false
   },
   "production": {
     "username": "root",
