--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --forceExit"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +15,14 @@
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "google-auth-library": "^9.6.3",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "sequelize": "^6.37.0",
     "sequelize-cli": "^6.6.2"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.4"
   }
 }
